# backend/server/src/main/java/studio/environment/server/security/HostedSecurity.java
@@ -82,6 +82,9 @@ public class HostedSecurity {
                 .requestMatchers(HttpMethod.GET, "/api/v3/profiles", "/api/v3/profiles/{objectId}", "/api/v3/profiles/{objectId}/revisions/{revision}").authenticated()
                 .requestMatchers(HttpMethod.PUT, "/api/v3/profiles/{objectId}").authenticated()
                 .requestMatchers(HttpMethod.POST, "/api/v3/definitions/{objectId}/publish", "/api/v3/profiles/{objectId}/publish").authenticated()
+                .requestMatchers(HttpMethod.GET, "/api/v3/plans/current", "/api/v3/plans/{planId}", "/api/v3/operations/{operationId}").authenticated()
+                .requestMatchers(HttpMethod.POST, "/api/v3/plans", "/api/v3/plans/{planId}/inspections",
+                        "/api/v3/operations/{operationId}/credentials", "/api/v3/operations/{operationId}/cancel").authenticated()
                 .requestMatchers(HttpMethod.PUT, "/api/v1/definitions/{objectId}").authenticated()
                 .requestMatchers(HttpMethod.GET, "/api/v1/destinations", "/api/v1/plans/current", "/api/v1/plans/{planId}", "/api/v1/operations/{operationId}").authenticated()
                 .requestMatchers(HttpMethod.POST, "/api/v1/plans", "/api/v1/plans/{planId}/inspections", "/api/v1/plans/{planId}/commands",
